[gd_scene load_steps=19 format=3 uid="uid://bhsx1muleg6rb"]

[ext_resource type="Material" uid="uid://c6j4a1mb0lsnn" path="res://assets/models/brushed_metal.tres" id="1_o8xko"]
[ext_resource type="Script" path="res://scripts/weapon_system.gd" id="1_svxjn"]
[ext_resource type="Material" uid="uid://dyctme5ipxdwq" path="res://assets/models/energy_off_material.tres" id="2_e54hl"]
[ext_resource type="PackedScene" uid="uid://ce7vysyvondf8" path="res://addons/godot-xr-tools/objects/snap_zone.tscn" id="2_mt5sv"]
[ext_resource type="Material" uid="uid://bsl8nqkej0v6p" path="res://assets/models/gold.tres" id="3_3gmll"]
[ext_resource type="PackedScene" uid="uid://cjxca3cw5mm3y" path="res://objects/example_slider.tscn" id="4_2e86t"]
[ext_resource type="Material" uid="uid://igospamby4es" path="res://assets/models/energy_on_material.tres" id="5_h6iod"]
[ext_resource type="PackedScene" uid="uid://cyh65iifm0jco" path="res://objects/cylinder_slider.tscn" id="5_y5onf"]
[ext_resource type="AudioStream" uid="uid://dnanhnqqufs3e" path="res://assets/audio/Kenney/Interface/switch_002.ogg" id="6_3h5fb"]
[ext_resource type="PackedScene" uid="uid://tj0a1cujtsih" path="res://objects/targetor.tscn" id="6_pdwjr"]
[ext_resource type="PackedScene" uid="uid://o82114q4g4vl" path="res://objects/big_gun.tscn" id="7_mn488"]
[ext_resource type="Material" uid="uid://bdtjv2pxcjyor" path="res://assets/models/energy_orange_material.tres" id="8_65k5p"]

[sub_resource type="BoxMesh" id="BoxMesh_j288w"]
size = Vector3(1.01, 0.11, 0.31)

[sub_resource type="BoxShape3D" id="BoxShape3D_cusyt"]
size = Vector3(0.539, 0.15, 0.23)

[sub_resource type="BoxMesh" id="BoxMesh_4lolr"]
size = Vector3(0.539, 0.15, 0.23)

[sub_resource type="PlaneMesh" id="PlaneMesh_5ppw0"]
material = ExtResource("3_3gmll")
size = Vector2(0.15, 0.15)

[sub_resource type="BoxMesh" id="BoxMesh_q48ae"]
size = Vector3(0.01, 0.01, 0.01)

[sub_resource type="SphereMesh" id="SphereMesh_t2fky"]
radius = 0.01
height = 0.02

[node name="WeaponSystem" type="Node3D"]
script = ExtResource("1_svxjn")
load_off = ExtResource("2_e54hl")
load_on = ExtResource("8_65k5p")

[node name="Rack" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, -0.6)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Rack"]
mesh = SubResource("BoxMesh_j288w")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("1_o8xko")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rack"]
shape = SubResource("BoxShape3D_cusyt")

[node name="Label3D" type="Label3D" parent="Rack"]
transform = Transform3D(0.44, 0, 0, 0, 0.44, 0, 0, 0, 0.44, 0, 0, 0.156462)
shaded = true
double_sided = false
text = "Weapon"

[node name="Rack2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0.997482, -0.6)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Rack2"]
mesh = SubResource("BoxMesh_4lolr")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("1_o8xko")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rack2"]
shape = SubResource("BoxShape3D_cusyt")

[node name="CellSnapZone" parent="." instance=ExtResource("2_mt5sv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.393983, 1.02575, -0.595761)
stash_sound = ExtResource("6_3h5fb")
grab_distance = 0.1
snap_require = "EnergyCell"

[node name="Ground" type="MeshInstance3D" parent="CellSnapZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0193713, 0)
mesh = SubResource("PlaneMesh_5ppw0")

[node name="EnergyIndicator1" type="MeshInstance3D" parent="CellSnapZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.065, -0.015, -0.065)
mesh = SubResource("BoxMesh_q48ae")
surface_material_override/0 = ExtResource("5_h6iod")

[node name="EnergyIndicator2" type="MeshInstance3D" parent="CellSnapZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.065, -0.015, -0.045)
mesh = SubResource("BoxMesh_q48ae")
surface_material_override/0 = ExtResource("5_h6iod")

[node name="EnergyIndicator3" type="MeshInstance3D" parent="CellSnapZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.065, -0.015, -0.025)
mesh = SubResource("BoxMesh_q48ae")
surface_material_override/0 = ExtResource("5_h6iod")

[node name="WeaponSliderOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, -0.248441, 1.08967, -0.43083)

[node name="WeaponSlider" parent="WeaponSliderOrigin" instance=ExtResource("4_2e86t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.1, 0)
slider_limit_max = Vector2(0.5, 0.2)
slider_position = Vector2(0.25, 0.1)

[node name="Ground" type="MeshInstance3D" parent="WeaponSliderOrigin"]
transform = Transform3D(-6.11817e-08, 0, 3.45681, 1.39967, -4.37114e-08, 1.51102e-07, 6.11817e-08, 1, 6.60489e-15, 0.248441, 0.0995734, -0.0890821)
mesh = SubResource("PlaneMesh_5ppw0")
skeleton = NodePath("../../CylinderSliderOrigin")

[node name="CylinderSliderOrigin" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.404064, 1.06263, -0.482442)

[node name="CylinderSlider" parent="CylinderSliderOrigin" instance=ExtResource("5_y5onf")]

[node name="Ground" type="MeshInstance3D" parent="CylinderSliderOrigin"]
transform = Transform3D(1.39967, 0, 0, 0, 1, 0, 0, 0, 0.138342, 0.0999999, -0.057182, 0)
mesh = SubResource("PlaneMesh_5ppw0")

[node name="LoadIndicator" type="MeshInstance3D" parent="CylinderSliderOrigin"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.056, 0.038)
mesh = SubResource("SphereMesh_t2fky")
surface_material_override/0 = ExtResource("8_65k5p")

[node name="TargetorOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Targetor" parent="TargetorOrigin" instance=ExtResource("6_pdwjr")]
unique_name_in_owner = true
min_rotation = Vector2(-0.785, -0.393)
max_rotation = Vector2(0.785, 0.393)
swap_y = true

[node name="Shooters" type="Node3D" parent="."]

[node name="BigGun" parent="Shooters" node_paths=PackedStringArray("targetor") instance=ExtResource("7_mn488")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.409932, -1.33787)
collision_layer = 2
collision_mask = 0
sync_to_physics = false
targetor = NodePath("../../TargetorOrigin/Targetor")

[connection signal="has_dropped" from="CellSnapZone" to="." method="_on_cell_snap_zone_has_dropped"]
[connection signal="has_picked_up" from="CellSnapZone" to="." method="_on_cell_snap_zone_has_picked_up"]
[connection signal="slider_moved" from="WeaponSliderOrigin/WeaponSlider" to="." method="_on_weapon_slider_slider_moved"]
[connection signal="bottom_reached" from="CylinderSliderOrigin/CylinderSlider" to="." method="_on_cylinder_slider_bottom_reached"]
[connection signal="top_reached" from="CylinderSliderOrigin/CylinderSlider" to="." method="_on_cylinder_slider_top_reached"]
